--- a/projects/index.html
+++ b/projects/index.html
@@ -211,7 +211,7 @@
       <img src="/assets/img/12.jpg" alt="project thumbnail" />
       
       <div class="card-body">
-        <h2 class="card-title text-lowercase">Modelling and Simulation of COVID-19 Vaccine Prioritization by Age Groups</h2>
+        <h2 class="card-title text-lowercase">COVID-19 Vaccine Prioritization</h2>
         <div class="row ml-1 mr-1 p-0">
           
         </div>
