--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -197,6 +197,8 @@
     <p>Given that there is only a limited quantity of the COVID-19 vaccines available, the goal of the project was to create a simulation in order to arrive at a well-motivated and data-driven decision on which age group to prioritize in the vaccine distribution plan with the goal of slowing down infections and decreasing death rates.
 Both models provided very rich and data-driven results that simulate the different scenarios of prioritizing one of the five age groups. In order to arrive at an answer to our question, we need to evaluate each of the two goals we had.</p>
 
+    <img src="/assets/img/CA_54_1.png" width="500">
+    
     <h3>Slowing down infections</h3>
     <p>As compared to the baseline of no vaccinations, both models came to the conclusion that the introduction and administration of vaccines decreased the daily infections in the system. 
 The following figures show the reduction in infections by prioritizing each of the age groups in both the CA and SEIR models.</p>
