--- a/projects/index.html
+++ b/projects/index.html
@@ -207,7 +207,7 @@
   
     <div class="card hoverable">
       
-      <img src="/assets/img/covidvaccine.jpeg" alt="project thumbnail" />
+      <img src="/assets/img/covidvaccine.jpg" alt="project thumbnail" />
       
       <div class="card-body">
         <h2 class="card-title">COVID-19 Vaccine Prioritization</h2>
