--- a/projects/index.html
+++ b/projects/index.html
@@ -259,7 +259,7 @@
 
      <div class="card hoverable">
 
-       <img src="/assets/img/tower.png" alt="project thumbnail" />
+       <img src="/assets/img/tower2.png" alt="project thumbnail" />
 
        <div class="card-body">
          <h2 class="card-title">TOWER</h2>
