--- a/projects/2_project 2/index.html
+++ b/projects/2_project 2/index.html
@@ -169,6 +169,7 @@
   </header>
 
   <article>
+    <p class="desc"><a href="https://github.com/youssefelmougy/TOWER">GitHub Repository Link</a></p>
     <p>TOWER is an Android Application designed to facilitate the trade of textbooks between Hofstra University students.</p>
     
     <h2>Initial Requirements of project</h2>
