--- a/projects/2_project 2/index.html
+++ b/projects/2_project 2/index.html
@@ -227,26 +227,26 @@
     
     <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://github.com/Tower-CSC-190/TOWER/blob/master/screenshots/Home.png" alt="" title="Home" />
+        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Home.png" alt="" title="Home" />
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="ttps://github.com/Tower-CSC-190/TOWER/blob/master/screenshots/Search%20after%20input.png" alt="" title="Search" />
+        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Search%20after%20input.png" alt="" title="Search" />
     </div>
  
     <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://github.com/Tower-CSC-190/TOWER/blob/master/screenshots/SpecificTextbook.png" alt="" title="Textbook" />
+        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/SpecificTextbook.png" alt="" title="Textbook" />
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://github.com/Tower-CSC-190/TOWER/blob/master/screenshots/Login.png" alt="" title="Login" />
+        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Login.png" alt="" title="Login" />
     </div>
    
     <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://github.com/Tower-CSC-190/TOWER/blob/master/screenshots/Sign-up.png" alt="" title="Signup" />
+        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Sign-up.png" alt="" title="Signup" />
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://github.com/Tower-CSC-190/TOWER/blob/master/screenshots/Settings.png" alt="" title="Settings" />
+        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Settings.png" alt="" title="Settings" />
     </div>
 
 
