--- a/projects/2_project 2/index.html
+++ b/projects/2_project 2/index.html
@@ -178,8 +178,7 @@
       <li>Students should enable students to sell their unwanted textbooks to other students. Students will browse the avaialable textbooks on their mobile (Android or iOS based) and must have access to the following capabilities.</li>
       <li>Registration for the system by providing their name, Hofstra ID, e-mail Address, and a password. Ability to log-in to the system by enterign their Hofstra ID and password.
 </li>
-      <li>Search for textbooks by title, ISBN number, or author, and scroll through the results of their search. The results of any search should include the price and condition of the book. Note that more than one of the same textbook may be returned by the search due to multiple students listing the same book. In this case the user should be presented with a list of results showing the different prices and conditions
-.</li>
+      <li>Search for textbooks by title, ISBN number, or author, and scroll through the results of their search. The results of any search should include the price and condition of the book. Note that more than one of the same textbook may be returned by the search due to multiple students listing the same book. In this case the user should be presented with a list of results showing the different prices and conditions.</li>
       <li>Purchase textbooks by sending an email to the textbook buyer and owner indicating an intent to purchase. Note that you are not required to implement a payment execution system. Instead, you are looking to match potential buyers with sellers.
 </li>
       <li>Each user will also be able to sell textbooks. The user will need to enter the title and ISBN number, price and condition of the book.
