--- a/projects/2_project 2/index.html
+++ b/projects/2_project 2/index.html
@@ -226,7 +226,7 @@
     
     <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Home.png" alt="" title="Home" />
+        <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/TOWER/master/screenshots/Home.png" alt="" title="Home" />
     </div>
     <div class="col-sm mt-3 mt-md-0">
         <img class="img-fluid rounded z-depth-1" src="https://github.com/youssefelmougy/TOWER/blob/master/screenshots/Search%20after%20input.png" alt="" title="Search" />
