--- a/projects/index.html
+++ b/projects/index.html
@@ -263,6 +263,7 @@
 
        <div class="card-body">
          <h2 class="card-title">TOWER</h2>
+         <p class="card-text">Textbook Exchange Application</p>
          <div class="row ml-1 mr-1 p-0">
 
          </div>
