--- a/projects/1_project 2/index.html
+++ b/projects/1_project 2/index.html
@@ -177,6 +177,8 @@
   </header>
 
   <article>
+    <p class="desc"><a href="https://github.com/youssefelmougy/Dungeon-Crawler-Game">GitHub Repository Link</a></p>
+    
     <b><i>Crawl through a dynamic dungeon!</i></b>
 
     <p>As you progress through the dungeon, encounter random monsters and chests to advance towards the Final Boss room to escape the dungeon. You may find potions and weapons during the journey, they will always help you! If you reach the final room, battle the Minotaur to escape the dungeon alive! Otherwise, you'll be stuck in the dungeon forever.</p>
