--- a/projects/1_project 2/index.html
+++ b/projects/1_project 2/index.html
@@ -200,7 +200,7 @@
         <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/potionAccuracy.png" alt="" title="Accuracy" />
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/potionAttack.png" alt="" title="Attack" />
+        <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/potionAttack.png" alt="" title="Attack" align="middle"/>
     </div>
     <div class="col-sm mt-3 mt-md-0">
         <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/potionHealth.png" alt="" title="Health" />
