--- a/projects/1_project 2/index.html
+++ b/projects/1_project 2/index.html
@@ -217,7 +217,7 @@
         <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/weaponAxe.png" alt="" title="Axe" />
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/weaponBow.png" alt="" title="Bow" />
+        <img class="img-fluid rounded z-depth-1" src="https://raw.githubusercontent.com/youssefelmougy/Dungeon-Crawler-Game/master/src/view/images/weaponBow.png" alt="" title="Bow" align="center" />
     </div>
 </div>
 <div class="caption">
