--- a/projects/index.html
+++ b/projects/index.html
@@ -224,10 +224,11 @@
 
      <div class="card hoverable">
 
-       <img src="/assets/img/12.jpg" alt="project thumbnail" />
+       <img src="/assets/img/crawler.png" alt="project thumbnail" />
 
        <div class="card-body">
          <h2 class="card-title">Dungeon Crawler Game</h2>
+         <p class="card-text">3rd person, single game</p>
          <div class="row ml-1 mr-1 p-0">
 
          </div>
@@ -310,7 +311,7 @@
   <a href="/projects/4_project%202/">
   
     <div class="card hoverable">
-      
+      <img src="/assets/img/12.jpg" alt="project thumbnail" />
       <div class="card-body">
         <h2 class="card-title">OP</h2>
         <p class="card-text">another without an image</p>
@@ -345,7 +346,7 @@
   <a href="/projects/4_project/">
   
     <div class="card hoverable">
-      
+      <img src="/assets/img/12.jpg" alt="project thumbnail" />
       <div class="card-body">
         <h2 class="card-title">MCL</h2>
         <p class="card-text">another without an image</p>
