--- a/projects/index.html
+++ b/projects/index.html
@@ -247,7 +247,7 @@
       <img src="/assets/img/amc.png" alt="project thumbnail" />
       
       <div class="card-body">
-        <h2 class="card-title">Movie Theatre</h2>
+        <h2 class="card-title">Movie Theatre Simulation</h2>
         <p class="card-text">FLEXSIM Model Simulation</p>
         <div class="row ml-1 mr-1 p-0">
           
