--- a/projects/index.html
+++ b/projects/index.html
@@ -284,7 +284,7 @@
       <img src="/assets/img/12.jpg" alt="project thumbnail" />
       
       <div class="card-body">
-        <h2 class="card-title">CSC158 Stocks</h2>
+        <h2 class="card-title">Predicting Stock Prices</h2>
         <div class="row ml-1 mr-1 p-0">
           
         </div>
