--- a/projects/3_project/index.html
+++ b/projects/3_project/index.html
@@ -188,7 +188,7 @@
     
     <h2>Results of Training NN</h2>
     
-    <video autoplay>
+    <video width="500" height="500" autoplay>
   <source src="https://user-images.githubusercontent.com/30897989/118402064-9950de80-b668-11eb-9fb6-311562e2082a.mp4" type="video/mp4">
 </video>
    
