--- a/experience/index.html
+++ b/experience/index.html
@@ -234,8 +234,8 @@
     <!-- Footer -->
 
     
-<footer class="sticky-bottom mt-5">
-  <div class="container">
+<footer class="fixed-bottom">
+  <div class="container mt-0">
     © Copyright 2021 Youssef Elmougy.
     Please <a href="mailto:yelmougy3@gatech.edu">email me</a> to get in contact! 
 
