--- a/experience/index.html
+++ b/experience/index.html
@@ -329,8 +329,8 @@
     <!-- Footer -->
 
     
-<footer class="fixed-bottom mt-5">
-  <div class="container mt-0">
+<footer class="sticky-bottom mt-5">
+  <div class="container">
     © Copyright 2021 Youssef Elmougy.
     Please <a href="mailto:yelmougy3@gatech.edu">email me</a> to get in contact! 
 
