--- a/experience/hofstrabs/index.html
+++ b/experience/hofstrabs/index.html
@@ -189,7 +189,7 @@
     <p><b>GPA: 4.0/4.0</b></p>
     
 
-    <h2>Achievements<h2>
+    <h2>Achievements</h2>
       
     <ul>
       <li>Provost Scholar for Fall 2017, Spring 2018, Fall 2018, Spring 2019, Fall 2019, and Spring 2020</li>
@@ -227,7 +227,7 @@
         <li>CSC 110 - INTRO COMP ARCHITECTURE</li>
         <li>CSC 110A - INTRO COMP ARCHITECTURE LAB</li>
         <li>CSC 112 - COMPUTER OPERATNG SYSTEM</li>
-        <li>CSC 120 - ALGORITHMS & DATA STRUCTURES<li>
+        <li>CSC 120 - ALGORITHMS & DATA STRUCTURES</li>
         <li>CSC 132 - COMPUTATIONAL MODELING</li>
         <li>CSC 144M - HIGH PERFORMANCE CLOUD COMPUTING</li>
         <li>CSC 158 - INTRO ARTIFICIAL INTELLIGENCE</li>
