--- a/experience/gtbs/index.html
+++ b/experience/gtbs/index.html
@@ -184,7 +184,7 @@
 
     <p>The Georgia Institute of Technology, commonly referred to as Georgia Tech, is a public research university and institute of technology in Atlanta, Georgia.</p>
 
-    <p>I am studying Computer Science at the College of Computing, with a concentration in <b>intelligence</b> and <b>modeling</b>.</p>
+    <p>I am studying Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>intelligence</b> and <b>modeling</b>.</p>
     
     <p><b>Anticipated Graduation: Fall 2021</b></p>
    
