--- a/experience/gtbs/index.html
+++ b/experience/gtbs/index.html
@@ -221,10 +221,12 @@
       
       <ul>
         <li>CS 1100 - Freshman Leap Seminar</li>
+        <li>CS 2200 - Systems and Networks</li>
         <li>CS 2340 - Objects and Design</li>
         <li>CS 3510 - Design & Analysis: Algorithms</li>
         <li>CS 3600 - Intro Artificial Intelligence</li>
         <li>CS 3630 - Intro Perception & Robotics</li>
+        <li>CS 4641 - Machine Learning</li>
         <li>CS 4873 - Computing, Society, & Professionalism</li>
         <li>VIP 2600/4601/4602 - VIP AAD Research</li>
         <li>CX 4230 - Computer Simulation</li>
