--- a/experience/gtms/index.html
+++ b/experience/gtms/index.html
@@ -184,7 +184,7 @@
 
     <p>The Georgia Institute of Technology, commonly referred to as Georgia Tech, is a public research university and institute of technology in Atlanta, Georgia.</p>
 
-    <p>I currently completing my Masters in Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>high performance computing</b>.</p>
+    <p>I am currently completing my Masters in Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>high performance computing</b>.</p>
     
     <p><b>Anticipated Graduation: Spring 2022</b></p>
    
