--- a/experience/index.html
+++ b/experience/index.html
@@ -150,7 +150,7 @@
   
   <li class="exp">
       <div>
-      <h4 class="year">Summer 2021</h4>
+      <h4 class="year">2021 - Present</h4>
         
         <img src="/assets/img/gt.jpg" alt="project thumbnail" />
         
