--- a/experience/index.html
+++ b/experience/index.html
@@ -194,7 +194,7 @@
           
             <a href="/experience/thetatau/">
           
-          <div class="exptitle">Theta Tau</div>
+          <div class="exptitle">Theta Tau Omega Beta</div>
           <div class="expdesc">Webmaster</div>
           </a>
         </div>
