--- a/experience/edtech/index.html
+++ b/experience/edtech/index.html
@@ -179,7 +179,9 @@
   </header>
 
   <article>
-    <p></p>
+    <p>I provide technical support to faculty members in the DeMatteis School of Engineering and Applied Science at Hofstra University. My primary support includes specialized software installation and configuration, hardware setup, and classroom technology support.</p>
+    
+    
 
   </article>
 
