--- a/experience/thetatau/index.html
+++ b/experience/thetatau/index.html
@@ -180,7 +180,9 @@
 
   <article>
 
-    <p>I was a webmaster for the Theta Tau Professional Engineering Fraternity (Hofstra University's Omega Beta chapter). This is the <a href="https://thetatauomb.com">website</a> I was in charge of.</p>
+    <p>I was webmaster for the Theta Tau Professional Engineering Fraternity (Hofstra University's Omega Beta chapter). This is the <a href="https://thetatauomb.com">website</a> I was in charge of.</p>
+    
+    <p>I lead the development and deployment of the chapter website. This included both front-end and back-end tasks. On the front-end, I handled updating member profiles, updating blogs and news items, and keeping the website up-to-date with the e-board meetings and events. On the back-end, I handled the refactoring of the full website repository code, the optimization for maximum speed and scalability, and commenting and documenting the code for easier future use.</p>
     
 
   </article>
