--- a/projects/2_project/index.html
+++ b/projects/2_project/index.html
@@ -174,7 +174,7 @@
   </header>
 
   <article>
-    <p class="desc"><a href="https://github.com/youssefelmougy/Movie-Theatre-Simulation-FLEXSIM">GitHub Repository Link</a> and <a href="https://github.com/youssefelmougy/Movie-Theatre-Simulation-FLEXSIM/blob/master/FINAL%20REPORT.pdf">PDF Report</a></p>
+    <p class="desc"><a href="https://github.com/youssefelmougy/Movie-Theatre-Simulation-FLEXSIM">GitHub Repository Link</a> and <a href="/assets/pdf/FINAL REPORT.pdf" role="button" target="_blank">PDF Report</a></p>
     
     <p>Our project is a model of the AMC Roosevelt Field 8 cinema using <a href="https://www.flexsim.com">FLEXSIM</a>.
 All the values calculated and utilized in this model are accurately approximated to mimic the real-life scenario.</p>
