--- a/projects/3_project/index.html
+++ b/projects/3_project/index.html
@@ -166,7 +166,7 @@
   </header>
 
   <article>
-    <p class="desc"><a href="https://github.com/youssefelmougy/Predicting-Stock-Prices-Using-AI">GitHub Repository Link</a> and <a href="https://github.com/youssefelmougy/Predicting-Stock-Prices-Using-AI/blob/main/Project%20Report.pdf">PDF Report</a></p>
+    <p class="desc"><a href="https://github.com/youssefelmougy/Predicting-Stock-Prices-Using-AI">GitHub Repository Link</a> and <a href="/assets/pdf/Project Report.pdf" role="button" target="_blank">PDF Report</a></p>
     <p>This project exploits a huge dataset containing stock prices for the S&P 500 Index and its constituents from April 2017 to August 2017 to precisely predict the next minute stock price of the S&P 500 Index. As the neural network is training and testing, a graph of the actual stock price and the predicted stock price will be plotted, moreover the error and accuracy will be calculated and displayed.</p>
 
     <p>PDF report contains project details. The following is the content of the report:</p>
