--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>Youssef Elmougy</title>
+<title>Youssef Elmougy | blank</title>
 <meta name="Youssef Elmougy" content="Youssef Elmougy's Official Page.
 ">
 
