--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
       <p>I'm a student at <a href="http://gatech.edu">Georgia Tech</a> graduating in Fall 2021 with a B.S. in Computer Science with a concentration in Artificial Intelligence and Computer Modelling. I will be continuing on to graduate in Spring 2022 with an M.S. in Computer Science with a concentration in High Performance Computing.</p>
 
-      <p>I am </p>
+      <p>I am currently a research assistant with the Automated Algorithm Design Team at Georgia Tech working on developing a framework that fundamentally alters the development of algorithms, and a CS 4873 (Computing, Society, & Professionalism) Teaching Assistant at Georgia Tech.</p>
       
     </div>
 
