--- a/experience/index.html
+++ b/experience/index.html
@@ -172,7 +172,7 @@
             <a href="/experience/aad/">
           
           <div class="exptitle">Automated Algorithm Design, Georgia Institute of Technology</div>
-          <div class="expdesc">Research Assistant</div>
+          <div class="expdesc">ML Research Assistant</div>
           </a>
         </div>
       </div>
@@ -208,7 +208,7 @@
             <a href="/experience/aspire/">
           
           <div class="exptitle">Advanced Summer Program in Research (ASPiRe), Hofstra University</div>
-          <div class="expdesc">Research Assistant</div>
+          <div class="expdesc">Cloud Research Assistant</div>
           </a>
         </div>
       </div>
