--- a/projects/index.html
+++ b/projects/index.html
@@ -231,6 +231,24 @@
    </a>
  </div>
           
+                    <div class="grid-item">
+          <a href="http://yelmougy.com/cryptoml/">
+
+     <div class="card hoverable">
+
+       <img src="/assets/img/bitcoin.png" alt="project thumbnail" />
+
+       <div class="card-body">
+         <h2 class="card-title">CryptoML</h2>
+         <p class="card-text">Cryptocurrency Meme-coin Prediction</p>
+         <div class="row ml-1 mr-1 p-0">
+
+         </div>
+       </div>
+     </div>
+   </a>
+ </div>
+          
              <div class="grid-item">
   
   <a href="/projects/2_project/">
