--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 
 
         <a href="https://github.com/youssefelmougy" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+        <a href="https://scholar.google.com/citations?user=FazAPJYAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
         <a href="https://www.linkedin.com/in/youssefelmougy" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
 
 
