--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <div class="clearfix">
 
-      <p>I am a Ph.D. student in Computer Science at the <a href="http://gatech.edu">Georgia Institute of Technology</a> advised by Dr. <a href="http://vsarkar.cc.gatech.edu">Vivek Sarkar</a> in the <a href="http://habanero.cc.gatech.edu">Habanero Extreme Scale Software Research Laboratory</a>. My main concentration is in Systems and High Performance Computing.</p>
+      <p>I am a Ph.D. student in Computer Science at the <a href="http://gatech.edu">Georgia Institute of Technology</a> advised by Dr. <a href="http://vsarkar.cc.gatech.edu">Vivek Sarkar</a> in the <a href="http://habanero.cc.gatech.edu">Habanero Extreme Scale Software Research Laboratory</a>. My main concentration is in <code class="language-plaintext highlighter-rouge">Systems</code> and <code class="language-plaintext highlighter-rouge">High Performance Computing</code>.</p>
 
       <p>I received both my B.S. in Computer Science (concentration in Artificial Intelligence and Computer Modeling) in 2021 and my M.S. in Computer Science (concentration in High Performance Computing) in 2022 from Georgia Tech.</p>
 
