--- a/publications/index.html
+++ b/publications/index.html
@@ -124,7 +124,7 @@
           <li class="nav-item ">
               <a class="nav-link" href="/publications/">
                 Publications
-                
+                <span class="sr-only">(current)</span>
               </a>
           </li>
           
