--- a/experience/index.html
+++ b/experience/index.html
@@ -97,7 +97,7 @@
           <li class="nav-item ">
               <a class="nav-link" href="/experience/">
                 Experience
-                
+                <span class="sr-only">(current)</span>
               </a>
           </li>
           
