--- a/experience/rahabanero/index.html
+++ b/experience/rahabanero/index.html
@@ -178,6 +178,10 @@
 
     <p>INSERT PHD RESEARCH...</p>
 
+	  
+	  Check this in-progress paper: <a href="/assets/pdf/DS_Project___Final_Report.pdf/">Increasing Resilience of Distributed Actor-Based Programming System by Supporting Complex Acyclic, Cyclic Task Dependencies</a>! 
+	  
+	  
 
   </article>
 
