--- a/experience/rahabanero/index.html
+++ b/experience/rahabanero/index.html
@@ -179,9 +179,9 @@
     <p>INSERT PHD RESEARCH...</p>
 
 	  
-	  Check this in-progress paper: <a href="/assets/pdf/DS_Project___Final_Report.pdf/">Increasing Resilience of Distributed Actor-Based Programming System by Supporting Complex Acyclic, Cyclic Task Dependencies</a>! 
+	  <p>Check this in-progress paper: <a href="/assets/pdf/DS_Project___Final_Report.pdf" role="button" target="_blank">Increasing Resilience of Distributed Actor-Based Programming System by Supporting Complex Acyclic, Cyclic Task Dependencies</a></p>! 
 	  
-	  
+
 
   </article>
 
