--- a/experience/rahabanero/index.html
+++ b/experience/rahabanero/index.html
@@ -181,6 +181,8 @@
 	  
 	  <p>Check this in-progress paper: <a href="/assets/pdf/DS_Project___Final_Report.pdf" role="button" target="_blank">Increasing Resilience of Distributed Actor-Based Programming System by Supporting Complex Acyclic, Cyclic Task Dependencies</a></p>! 
 	  
+	  
+	  <p><a href="/assets/pdf/Diagnosing_the_Interference_on_CPU-GPU_Synchronization_Caused_by_CPU_Sharing_in_Multi-Tenant_GPU_Clouds-3.pdf" role="button" target="_blank">confidential dont share</a></p>.
 
 
   </article>
