--- a/publications/index.html
+++ b/publications/index.html
@@ -399,7 +399,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="/assets/pdf/ICCTA_final.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF (to appear on IEEE Explore)</a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9916625" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
             <a href="/assets/pdf/ICCTA_Presentation_Slides.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
           </div>
 
