--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://www.sciencedirect.com/science/article/abs/pii/S1877750323000741" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ScienceDirect PDF</a>
+            <a href="https://www.sciencedirect.com/science/article/pii/S1877750323000741?casa_token=Ann_uFV5oyEAAAAA:ziXE-jtdlDVjaDSUWua6fC4f0z0qvToiyEEtaFwOpL9HYKIr6PS9p_H4G_jsuQloZtNFUAaKGuQV" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ScienceDirect PDF</a>
           </div>
 
           <!-- Hidden abstract block -->
