--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="clearfix">
 
       <p>I am a Ph.D. student in Computer Science at the <a href="http://gatech.edu">Georgia Institute of Technology</a> advised by Dr. <a href="http://vsarkar.cc.gatech.edu">Vivek Sarkar</a> in the <a href="http://habanero.cc.gatech.edu">Habanero Extreme Scale Software 
-	      Laboratory</a>. In addition, I am a research intern at the Lawrence Berkeley National Lab, working with several researchers in the Performance and Algorithms Research Lab (PAR). My main concentration is in <code class="language-plaintext highlighter-rouge">Systems</code>, <code class="language-plaintext highlighter-rouge">High Performance Computing</code>, and <code class="language-plaintext highlighter-rouge">Deep Learning (AI/DL)</code>.</p>
+	      Laboratory</a>. In addition, I am a research intern at the <a href="https://www.lbl.gov/">Lawrence Berkeley National Lab</a>, working with several researchers in the Performance and Algorithms Research Lab (<a href="https://crd.lbl.gov/divisions/amcr/computer-science-amcr/par/">PAR</a>). My main concentration is in <code class="language-plaintext highlighter-rouge">Systems</code>, <code class="language-plaintext highlighter-rouge">High Performance Computing</code>, and <code class="language-plaintext highlighter-rouge">Deep Learning (AI/DL)</code>.</p>
 
       <p>I received both my B.S. in Computer Science (concentration in Artificial Intelligence and Computer Modeling) in 2021 and my M.S. in Computer Science (concentration in High Performance Computing) in 2022 from Georgia Tech.</p>
 
