--- a/experience/index.html
+++ b/experience/index.html
@@ -26,7 +26,7 @@
 <link rel="stylesheet" href="https://gitcdn.link/repo/jwarby/jekyll-pygments-themes/master/github.css" />
 
 <!-- Styles -->
-<link rel="shortcut icon" href="/assets/img/favicon.ico">
+<link rel="icon" href="/assets/pdf/ye_logo.png">
 <link rel="stylesheet" href="/assets/css/main.css">
 
 <link rel="canonical" href="/experience/">
