--- a/publications/index.html
+++ b/publications/index.html
@@ -202,15 +202,16 @@
           <div class="author"><em>Youssef Elmougy</em>, Ling Liu
           </div>
 
-          <!-- Journal/Book title and date -->
+      <!-- Journal/Book title and date -->
           <div class="periodical"> 
-            <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)</em>, 2023
+            <em>ACM KDD Conference on Knowledge Discovery and Data Mining (KDD)</em>, 2023
           </div>
         
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF (TO APPEAR IN PROCEEDINGS)</a>
+		  <a href="https://dl.acm.org/doi/10.1145/3580305.3599803" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ACM Digital Library</a>
+            <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
             <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides (TO APPEAR)</a>
           </div>
