--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </li>
 		
           <li class="nav-item ">
-              <a class="nav-link" href="/assets/pdf/ElmougyYoussef_Resume.pdf">
+              <a class="nav-link" href="https://yelmougy.com/CV.pdf">
                 CV
                 
               </a>
@@ -243,13 +243,14 @@
 
           <!-- Journal/Book title and date -->
           <div class="periodical"> 
-            <em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)</em>, 2023
+            <em>ACM KDD Conference on Knowledge Discovery and Data Mining (KDD)</em>, 2023
           </div>
         
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF (TO APPEAR IN PROCEEDINGS)</a>
+		  <a href="https://dl.acm.org/doi/10.1145/3580305.3599803" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ACM Digital Library</a>
+            <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
             <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides (TO APPEAR)</a>
           </div>
