--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		  <a href="https://dl.acm.org/doi/10.1145/3580305.3599803" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ACM Digital Library</a>
             <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
-            <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides (TO APPEAR)</a>
+            <a href="/assets/pdf/SIGKDD23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
           </div>
 
           <!-- Hidden abstract block -->
