--- a/experience/index.html
+++ b/experience/index.html
@@ -109,7 +109,7 @@
           </li>
 		
           <li class="nav-item ">
-              <a class="nav-link" href="/assets/pdf/ElmougyYoussef_Resume.pdf">
+              <a class="nav-link" href="https://yelmougy.com/CV.pdf">
                 CV
                 
               </a>
