--- a/projects/index.html
+++ b/projects/index.html
@@ -143,7 +143,7 @@
           </li>
 		
           <li class="nav-item ">
-              <a class="nav-link" href="/assets/pdf/ElmougyYoussef_Resume.pdf">
+              <a class="nav-link" href="https://yelmougy.com/CV.pdf">
                 CV
                 
               </a>
