--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 
       <p>I received both my B.S. in Computer Science (concentration in Artificial Intelligence and Computer Modeling) in 2021 and my M.S. in Computer Science (concentration in High Performance Computing) in 2022 from Georgia Tech.</p>
 
-      <p>Recently, I’ve been working on distributed graph algorithms in the actor-based programming system, distributed training for deep learning workflows (DL), hybrid communication strategies for computation intensive applications, enabling resiliency in Asynchronous Many-Task (AMT) programming models, automatic termination graph detection, approximation algorithms, and graph-based blockchain transaction forecasting.</>
-      
+	<p>Recently, my research is focused on building runtime systems and distributed applications for large-scale computations, focusing on novel communication strategies, efficient data distributions, scalability performance, and SW/HW co-design.</p>
+	      
       <h2>Research Interests</h2>
       <p>Distributed/parallel systems, High Performance Computing (HPC), programming models, and deep learning.</p>
 
