--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
       <p>I received both my B.S. in Computer Science (concentration in Artificial Intelligence and Computer Modeling) in 2021 and my M.S. in Computer Science (concentration in High Performance Computing) in 2022 from Georgia Tech.</p>
 
-	<p>Recently, my research is focused on building runtime systems and distributed applications for large-scale computations, focusing on novel communication strategies, efficient data distributions, scalability performance, and SW/HW co-design.</p>
+	<p>Recently, my research is concentrated on building runtime systems and distributed applications for large-scale computations, focusing on novel communication strategies, efficient data distributions, scalability performance, and SW/HW co-design.</p>
 	      
       <h2>Research Interests</h2>
       <p>Distributed/parallel systems, High Performance Computing (HPC), programming models, and deep learning.</p>
