--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
             <a href="https://ieeexplore.ieee.org/abstract/document/10181177" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+	    <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award</a>
             <a href="/assets/pdf/CCGRID23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
             <a href="https://youtu.be/fMSbSHhsW0o" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Demo Video</a>
           </div>
