--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 	<p>Recently, my research is concentrated on building runtime systems and distributed applications for large-scale computations, focusing on novel communication strategies, efficient data distributions, scalability performance, and SW/HW co-design.</p>
 	      
       <h2>Research Interests</h2>
-      <p><code class="language-plaintext highlighter-rouge">Distributed/parallel systems</code>, <code class="language-plaintext highlighter-rouge">High Performance Computing (HPC)</code>, <code class="language-plaintext highlighter-rouge">programming models</code>, and <code class="language-plaintext highlighter-rouge">deep learning</code>.</p>
+      <p><code class="language-plaintext highlighter-rouge">Distributed/parallel systems</code>, <code class="language-plaintext highlighter-rouge">High Performance Computing (HPC)</code>, <code class="language-plaintext highlighter-rouge">programming models</code>, <code class="language-plaintext highlighter-rouge">deep learning</code></p>
 
 	    
     </div>
