--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="clearfix">
 
       <p>I am a Ph.D. student in Computer Science at the <a href="http://gatech.edu">Georgia Institute of Technology</a> advised by Dr. <a href="http://vsarkar.cc.gatech.edu">Vivek Sarkar</a> in the <a href="http://habanero.cc.gatech.edu">Habanero Extreme Scale Software 
-	      Laboratory</a>. I was previously a Research Intern at <a href="https://www.nvidia.com/">NVIDIA</a> (NV Research - PSA) in 2024 and at the <a href="https://www.lbl.gov/">Lawrence Berkeley National Lab</a> (<a href="https://crd.lbl.gov/divisions/amcr/computer-science-amcr/par/">PAR</a>) in 2023. My main concentration is in <code class="language-plaintext highlighter-rouge">Systems</code>, <code class="language-plaintext highlighter-rouge">High Performance Computing</code>, and <code class="language-plaintext highlighter-rouge">Deep Learning (AI/DL)</code>.</p>
+	      Laboratory</a> (graduating '25). I was previously a Research Intern at <a href="https://www.nvidia.com/">NVIDIA</a> (NV Research - PSA) in 2024 and at the <a href="https://www.lbl.gov/">Lawrence Berkeley National Lab</a> (<a href="https://crd.lbl.gov/divisions/amcr/computer-science-amcr/par/">PAR</a>) in 2023. My main concentration is in <code class="language-plaintext highlighter-rouge">Systems</code>, <code class="language-plaintext highlighter-rouge">High Performance Computing</code>, and <code class="language-plaintext highlighter-rouge">Deep Learning (AI/DL)</code>.</p>
 
       <p>I received both my B.S. in Computer Science (concentration in Artificial Intelligence and Computer Modeling) in 2021 and my M.S. in Computer Science (concentration in High Performance Computing) in 2022 from Georgia Tech.</p>
 
